tests/snapshots/snapshots__budget_sonner_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (979 words)

FUNDING.yml
     1→github …
README.md
     5→## Usage
     7→To start using the library, install it in your project:
     8→
     9→```bash
    10→npm install sonner
    11→```
    12→
      →…
    31→## Documentation
    33→Find the full API reference in the [documentation](https://sonner.emilkowal.ski/getting-started).
package.json
     2→  "name": "sonner",
     3→  "version": "2.0.7",
     4→  "description": "An opinionated toast component for React.",
     5→  "exports": {
    18→  },
    19→  "main": "./dist/index.js",
    20→  "types": "./dist/index.d.ts",
    21→  "files": [
    23→  ],
    24→  "scripts": {
    32→  },
    33→  "keywords": [
    39→  ],
    40→  "author": "Emil Kowalski <e@emilkowal.ski>",
    41→  "license": "MIT",
    42→  "homepage": "https://sonner.emilkowal.ski/",
    43→  "repository": {
    46→  },
    47→  "bugs": {
    49→  },
    50→  "devDependencies": {
    60→  },
    61→  "peerDependencies": {
    64→  },
    65→  "packageManager": "pnpm@9.15.9"
    66→}
playwright.config.ts
pnpm-workspace.yaml
     1→packages …
src/assets.tsx
     2→import React from 'react';
     3→import type { ToastTypes } from './types …
     5→export const getAsset = (type: ToastTypes): JSX.Element | null => {
    26→export const Loader = ({ visible, className }: { visible: boolean; className?: string }) => {
    78→export const CloseIcon = (
    79→  <svg
    80→    xmlns="http://www.w3.org/2000/svg"
      →…
src/hooks.tsx
     1→import React from 'react';
     3→export const useIsDocumentHidden = () => {
src/index.tsx
     3→import React from 'react';
     4→import ReactDOM from 'react-dom';
     6→import { CloseIcon, getAsset, Loader } from './assets …
     7→import { useIsDocumentHidden } from './hooks …
     8→import { toast, ToastState } from './state …
     9→import './styles.css …
    10→./types …
    45→function cn(...classes: (string | undefined)[]) {
    49→function getDefaultSwipeDirections(position: string): Array<SwipeDirection> {
    64→const Toast = (props: ToastProps) => {
   507→function getDocumentDirection(): ToasterProps['dir'] {
   520→function assignOffset(defaultOffset: ToasterProps['offset'], mobileOffset: ToasterProps['mobileOffset']) {
   552→function useSonner() {
src/state.ts
     1→./types …
    11→import React from 'react';
    15→type titleT = (() => React.ReactNode) | React.ReactNode;
    17→class Observer {
    18→  subscribers: Array<(toast: ExternalToast | ToastToDismiss) => void>;
    22→  constructor …
    29→  subscribe …
    38→  publish …
    42→  addToast …
    47→  create …
    88→  dismiss …
   101→  message …
   105→  error …
   109→  success …
   113→  info …
   117→  warning …
   121→  loading …
   125→  promise …
   243→  custom …
   249→  getActiveToasts …
   254→export const ToastState …
   257→const toastFunction …
   268→const isHttpResponse …
   279→const basicToast = toastFunction;
   281→const getHistory …
   282→const getToasts …
   285→export const toast …
src/types.ts
     1→import React from 'react';
     3→export type ToastTypes …
     5→export type PromiseT …
     7→export interface PromiseIExtendedResult extends ExternalToast {
    11→export type PromiseTExtendedResult …
    15→export type PromiseTResult …
    20→export type PromiseExternalToast …
    22→export type PromiseData …
    30→export interface ToastClassnames {
    48→export interface ToastIcons {
    57→export interface Action {
    63→export interface ToastT {
    93→export function isAction …
    97→export type Position …
    98→export interface HeightT {
   104→interface ToastOptions {
   105→  className?: string;
      →…
   118→type Offset =
   119→  | {
   128→export interface ToasterProps {
   152→export type SwipeDirection …
   154→export interface ToastProps {
   184→export enum SwipeStateTypes {
   190→export type Theme …
   192→export interface ToastToDismiss {
   197→export type ExternalToast …
test/README.md
test/next.config.js
test/package.json
test/src/app/action.tsx
test/src/app/layout.tsx
     1→export const metadata = {
test/src/app/page.tsx
     7→const promise …
test/tests/basic.spec.ts
test/tsconfig.json
tsconfig.json
     2→  "compilerOptions": {
     8→  },
     9→  "include": ["src"]
    10→}
turbo.json
     2→  "$schema": "https://turbo.build/schema.json",
     3→  "extends": ["//"],
     4→  "pipeline": {
    13→}
website/README.md
     3→## Getting Started
     5→First, run the development server:
     6→
     7→```bash
     8→npm run dev
     9→# or
    10→yarn dev
    11→# or
    12→pnpm dev
    13→```
    14→
      →…
    25→## Learn More
    27→To learn more about Next.js, take a look at the following resources:
    28→
    29→- [Next.js Documentation](https://nextjs.org/docs) - learn about Next.js features and API.
    30→- [Learn Next.js](https://nextjs.org/learn) - an interactive Next.js tutorial.
    31→
    32→You can check out [the Next.js GitHub repository](https://github.com/vercel/next.js/) - your feedback and contributions are welcome!
    33→
    34→## Deploy on Vercel
    36→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/new?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    37→
    38→Check out our [Next.js deployment documentation](https://nextjs.org/docs/deployment) for more details.
website/next.config.js
     1→/** @type {import('next').NextConfig} */
     2→const nextConfig = {
     8→const withNextra = require('nextra')({
website/package.json
     2→  "name": "website",
     3→  "version": "0.1.0",
     4→  "scripts": {
     9→  },
    10→  "dependencies": {
    29→  },
    30→  "devDependencies": {
    35→}
website/src/components/CodeBlock/index.tsx
     7→import styles from './code-block.module.css';
     9→const variants = {
    14→const theme = {
    48→export const CodeBlock = ({ children, initialHeight = 0 }: { children: string; initialHeight?: number }) => {
website/src/components/ExpandModes/index.tsx
     1→import { toast } from 'sonner';
     2→import { CodeBlock } from '../CodeBlock';
     4→export const ExpandModes = ({
     5→  expand,
     6→  setExpand,
     7→}: {
      →…
website/src/components/Footer/index.tsx
     1→import Image from 'next/image';
     2→import emil from 'public/emil.jpeg';
     3→import styles from './footer.module.css';
     5→export const Footer = () => {
     6→  return (
     7→    <footer className={styles.wrapper}>
      →…
website/src/components/Head/index.tsx
     1→import NextHead from 'next/head';
     3→const ogImage = 'https://sonner.emilkowal.ski/og.png';
     5→const Head …
website/src/components/Hero/index.tsx
     3→import styles from './hero.module.css';
     6→export const Hero = () => {
     7→  return (
     8→    <div className={styles.wrapper}>
      →…
website/src/components/How/How.tsx
     1→import React from 'react';
     3→export const How = () => {
     4→  return (
     5→    <>
     6→      <div>
      →…
website/src/components/Installation/index.tsx
     7→import styles from './installation.module.css';
     9→const variants = {
    14→export const Installation = () => {
    15→  const [copying, setCopying] = React.useState(0);
    16→
      →…
website/src/components/Other/Other.tsx
     4→import { CodeBlock } from '../CodeBlock';
     5→import styles from './other.module.css';
     7→export const Other = ({
     8→  setRichColors,
     9→  setCloseButton,
    10→}: {
      →…
website/src/components/Position/index.tsx
     2→import { CodeBlock } from '../CodeBlock';
     5→const positions …
     7→export type Position = (typeof positions)[number];
     9→export const Position = ({
    10→  position: activePosition,
    11→  setPosition,
    12→}: {
      →…
website/src/components/Types/Types.tsx
     3→import { CodeBlock } from '../CodeBlock';
     5→const promiseCode = '`${data.name} toast has been added`';
     7→export const Types = () => {
     8→  const [activeType, setActiveType] = React.useState(allTypes[0]);
     9→
      →…
    34→const allTypes = [
website/src/components/Usage/index.tsx
     1→import { CodeBlock } from '../CodeBlock';
     3→export const Usage = () => {
     4→  return (
     5→    <div>
     6→      <h2>Usage</h2>
      →…
website/src/pages/_app.tsx
     4→import '../style.css';
     5→import '../globals.css';
     7→export default function Nextra({ Component, pageProps }: AppProps): ReactElement {
website/src/pages/_meta.json
     2→  "getting-started": {
     5→  },
     6→  "-- API": {
     9→  },
    10→  "toast": {
    13→  },
    14→  "toaster": {
    17→  },
    18→  "-- More": {
    21→  },
    22→  "styling": {
    26→}
website/src/pages/index.tsx
    10→import Head from '../components/Head';
    11→import { How } from '../components/How/How';
    12→import { Footer } from '../components/Footer';
    14→export default function Home() {
website/theme.config.jsx
     7→  useNextSeoProps() {
website/tsconfig.json
     2→  "compilerOptions": {
    26→  },
    27→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
    28→  "exclude": ["node_modules"]
    29→}
