tests/snapshots/snapshots__budget_sonner_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2006 tokens)

FUNDING.yml
     1→github: emilkowalski

README.md
     5→## Usage
     7→To start using the library, install it in your project:
     8→
     9→```bash
    10→npm install sonner
    11→```
    12→
      →…
    31→## Documentation
    33→Find the full API reference in the [documentation](https://sonner.emilkowal.ski/getting-started).

package.json
     2→  "name": "sonner",
     3→  "version": "2.0.7",
     4→  "description": "An opinionated toast component for React.",
     5→  "exports": {
    19→  "main": "./dist/index.js",
    20→  "types": "./dist/index.d.ts",
    21→  "files": [
    24→  "scripts": {
    33→  "keywords": [
    40→  "author": "Emil Kowalski <e@emilkowal.ski>",
    41→  "license": "MIT",
    42→  "homepage": "https://sonner.emilkowal.ski/",
    43→  "repository": {
    47→  "bugs": {
    50→  "devDependencies": {
    61→  "peerDependencies": {
    65→  "packageManager": "pnpm@9.15.9"

pnpm-workspace.yaml
     1→packages:

src/assets.tsx
     2→import React from 'react';
     3→import type { ToastTypes } from './types';
     5→export const getAsset = (type: ToastTypes): JSX.Element | null => {
     6→  switch (type) {
      →  …
    24→const bars = Array(12).fill(0);
    26→export const Loader = ({ visible, className }: { visible: boolean; className?: string }) => {
    27→  return (
      →  …
    38→const SuccessIcon = (
    48→const WarningIcon = (
    58→const InfoIcon = (
    68→const ErrorIcon = (
    78→export const CloseIcon = (

src/hooks.tsx
     1→import React from 'react';
     3→export const useIsDocumentHidden = () => {
     4→  const [isDocumentHidden, setIsDocumentHidden] = React.useState(document.hidden);
     5→
      →…

src/index.tsx
     3→import React from 'react';
     4→import ReactDOM from 'react-dom';
     6→import { CloseIcon, getAsset, Loader } from './assets';
     7→import { useIsDocumentHidden } from './hooks';
     8→import { toast, ToastState } from './state';
     9→import './styles.css';
    10→import {
    11→  isAction,
    12→  SwipeDirection,
    13→  type ExternalToast,
    14→  type HeightT,
    15→  type ToasterProps,
    16→  type ToastProps,
    17→  type ToastT,
    18→  type ToastToDismiss,
    19→} from './types';
    22→const VISIBLE_TOASTS_AMOUNT = 3;
    25→const VIEWPORT_OFFSET = '24px';
    28→const MOBILE_VIEWPORT_OFFSET = '16px';
    31→const TOAST_LIFETIME = 4000;
    34→const TOAST_WIDTH = 356;
    37→const GAP = 14;
    40→const SWIPE_THRESHOLD = 45;
    43→const TIME_BEFORE_UNMOUNT = 200;
    45→function cn(...classes: (string | undefined)[]) {
    49→function getDefaultSwipeDirections(position: string): Array<SwipeDirection> {
    64→const Toast = (props: ToastProps) => {
   507→function getDocumentDirection(): ToasterProps['dir'] {
   520→function assignOffset(defaultOffset: ToasterProps['offset'], mobileOffset: ToasterProps['mobileOffset']) {
   552→function useSonner() {
   593→const Toaster = React.forwardRef<HTMLElement, ToasterProps>(function Toaster(props, ref) {

src/state.ts
     1→import type { …
    11→import React from 'react';
    15→type titleT = (() => React.ReactNode) | React.ReactNode;
    17→class Observer {
    22→  constructor() {
    29→  subscribe = (subscriber: (toast: ToastT | ToastToDismiss) => void) => {
    38→  publish = (data: ToastT) => {
    42→  addToast = (data: ToastT) => {
    47→  create = (
    48→    data: ExternalToast & {
    88→  dismiss = (id?: number | string) => {
   101→  message = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   105→  error = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   109→  success = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   113→  info = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   117→  warning = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   121→  loading = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   125→  promise = <ToastData>(promise: PromiseT<ToastData>, data?: PromiseData<ToastData>) => {
   243→  custom = (jsx: (id: number | string) => React.ReactElement, data?: ExternalToast) => {
   249→  getActiveToasts = () => {
   254→export const ToastState = new Observer();
   257→const toastFunction = (message: titleT, data?: ExternalToast) => {
   268→const isHttpResponse = (data: any): data is Response => {
   279→const basicToast = toastFunction;
   281→const getHistory = () => ToastState.toasts;
   282→const getToasts = () => ToastState.getActiveToasts();
   285→export const toast = Object.assign(

src/types.ts
     1→import React from 'react';
     3→export type ToastTypes …
     5→export type PromiseT …
     7→export interface PromiseIExtendedResult extends ExternalToast {
    11→export type PromiseTExtendedResult …
    15→export type PromiseTResult …
    20→export type PromiseExternalToast …
    22→export type PromiseData …
    30→export interface ToastClassnames {
    48→export interface ToastIcons {
    57→export interface Action {
    63→export interface ToastT {
    93→export function isAction(action: Action | React.ReactNode): action is Action {
    94→  return (action as Action).label !== undefined;
    95→}
    97→export type Position …
    98→export interface HeightT {
   104→interface ToastOptions {
   118→type Offset =
   119→  | {
   128→export interface ToasterProps {
   152→export type SwipeDirection …
   154→export interface ToastProps {
   184→export enum SwipeStateTypes {
   190→export type Theme …
   192→export interface ToastToDismiss {
   197→export type ExternalToast …

test/README.md
     3→## Getting Started
    25→## Learn More
    34→## Deploy on Vercel

test/package.json

test/src/app/action.tsx
     4→export async function action() {

test/src/app/layout.tsx
     1→export const metadata = {
     6→export default function RootLayout({ children }: { children: React.ReactNode }) {

test/src/app/page.tsx
     9→export default function Home({ searchParams }: any) {

test/tsconfig.json

tsconfig.json
     2→  "compilerOptions": {
     8→  },
     9→  "include": ["src"]
    10→}

turbo.json
     2→  "$schema": "https://turbo.build/schema.json",
     3→  "extends": ["//"],
     4→  "pipeline": {
    12→  }
    13→}

website/README.md
     3→## Getting Started
    25→## Learn More
    34→## Deploy on Vercel

website/package.json

website/src/pages/_app.tsx
     4→import '../style.css';
     5→import '../globals.css';
     7→export default function Nextra …

website/src/pages/index.tsx
    14→export default function Home() {
