tests/snapshots/snapshots__budget_sonner_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4057 tokens)

FUNDING.yml
     1→github: emilkowalski

README.md
     5→## Usage
     7→To start using the library, install it in your project:
     8→
     9→```bash
    10→npm install sonner
    11→```
    12→
    13→Add `<Toaster />` to your app, it will be the place where all your toasts will be rendered.
    14→After that you can use `toast()` from anywhere in your app.
    15→
    16→```jsx
    17→import { Toaster, toast } from 'sonner';
    18→
    19→// ...
    20→
    21→function App() {
    22→  return (
    23→    <div>
    24→      <Toaster />
      →      …
    31→## Documentation
    33→Find the full API reference in the [documentation](https://sonner.emilkowal.ski/getting-started).

package.json
     2→  "name": "sonner",
     3→  "version": "2.0.7",
     4→  "description": "An opinionated toast component for React.",
     5→  "exports": {
    18→  },
    19→  "main": "./dist/index.js",
    20→  "types": "./dist/index.d.ts",
    21→  "files": [
    23→  ],
    24→  "scripts": {
    32→  },
    33→  "keywords": [
    39→  ],
    40→  "author": "Emil Kowalski <e@emilkowal.ski>",
    41→  "license": "MIT",
    42→  "homepage": "https://sonner.emilkowal.ski/",
    43→  "repository": {
    46→  },
    47→  "bugs": {
    49→  },
    50→  "devDependencies": {
    60→  },
    61→  "peerDependencies": {
    64→  },
    65→  "packageManager": "pnpm@9.15.9"
    66→}

playwright.config.ts
     1→import { defineConfig, devices } from '@playwright/test';

pnpm-workspace.yaml
     1→packages:

src/assets.tsx
     2→import React from 'react';
     3→import type { ToastTypes } from './types';
     5→export const getAsset = (type: ToastTypes): JSX.Element | null => {
     6→  switch (type) {
     7→    case 'success':
     8→      return SuccessIcon;
     9→
      →…
    24→const bars = Array(12).fill(0);
    26→export const Loader = ({ visible, className }: { visible: boolean; className?: string }) => {
    27→  return (
    28→    <div className={['sonner-loading-wrapper', className].filter(Boolean).join(' ')} data-visible={visible}>
    29→      <div className="sonner-spinner">
    30→        {bars.map((_, i) => (
      →        …
    38→const SuccessIcon = (
    48→const WarningIcon = (
    58→const InfoIcon = (
    68→const ErrorIcon = (
    78→export const CloseIcon = (
    79→  <svg
      →  …

src/hooks.tsx
     1→import React from 'react';
     3→export const useIsDocumentHidden = () => {
     4→  const [isDocumentHidden, setIsDocumentHidden] = React.useState(document.hidden);
     5→
     6→  React.useEffect(() => {
     7→    const callback = () => {
     8→      setIsDocumentHidden(document.hidden);
     9→    };
    10→    document.addEventListener('visibilitychange', callback);
    11→    return () => document.removeEventListener('visibilitychange', callback);
    12→  }, []);
    13→
    14→  return isDocumentHidden;
    15→};

src/index.tsx
     3→import React from 'react';
     4→import ReactDOM from 'react-dom';
     6→import { CloseIcon, getAsset, Loader } from './assets';
     7→import { useIsDocumentHidden } from './hooks';
     8→import { toast, ToastState } from './state';
     9→import './styles.css';
    10→import {
    11→  isAction,
    12→  SwipeDirection,
    13→  type ExternalToast,
    14→  type HeightT,
    15→  type ToasterProps,
    16→  type ToastProps,
    17→  type ToastT,
    18→  type ToastToDismiss,
    19→} from './types';
    22→const VISIBLE_TOASTS_AMOUNT = 3;
    25→const VIEWPORT_OFFSET = '24px';
    28→const MOBILE_VIEWPORT_OFFSET = '16px';
    31→const TOAST_LIFETIME = 4000;
    34→const TOAST_WIDTH = 356;
    37→const GAP = 14;
    40→const SWIPE_THRESHOLD = 45;
    43→const TIME_BEFORE_UNMOUNT = 200;
    45→function cn(...classes: (string | undefined)[]) {
    49→function getDefaultSwipeDirections(position: string): Array<SwipeDirection> {
    64→const Toast = (props: ToastProps) => {
   507→function getDocumentDirection(): ToasterProps['dir'] {
   520→function assignOffset(defaultOffset: ToasterProps['offset'], mobileOffset: ToasterProps['mobileOffset']) {
   552→function useSonner() {
   593→const Toaster = React.forwardRef<HTMLElement, ToasterProps>(function Toaster(props, ref) {

src/state.ts
     1→import type {
     2→  ExternalToast,
     3→  PromiseData,
     4→  PromiseIExtendedResult,
     5→  PromiseT,
     6→  ToastT,
     7→  ToastToDismiss,
     8→  ToastTypes,
     9→} from './types';
    11→import React from 'react';
    15→type titleT = (() => React.ReactNode) | React.ReactNode;
    17→class Observer {
    22→  constructor() {
    29→  subscribe = (subscriber: (toast: ToastT | ToastToDismiss) => void) => {
    38→  publish = (data: ToastT) => {
    42→  addToast = (data: ToastT) => {
    47→  create = (
    48→    data: ExternalToast & {
    88→  dismiss = (id?: number | string) => {
   101→  message = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   105→  error = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   109→  success = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   113→  info = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   117→  warning = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   121→  loading = (message: titleT | React.ReactNode, data?: ExternalToast) => {
   125→  promise = <ToastData>(promise: PromiseT<ToastData>, data?: PromiseData<ToastData>) => {
   243→  custom = (jsx: (id: number | string) => React.ReactElement, data?: ExternalToast) => {
   249→  getActiveToasts = () => {
   254→export const ToastState = new Observer();
   257→const toastFunction = (message: titleT, data?: ExternalToast) => {
   268→const isHttpResponse = (data: any): data is Response => {
   279→const basicToast = toastFunction;
   281→const getHistory = () => ToastState.toasts;
   282→const getToasts = () => ToastState.getActiveToasts();
   285→export const toast = Object.assign(
   286→  basicToast,
   287→  {
      →  …

src/types.ts
     1→import React from 'react';
     3→export type ToastTypes = 'normal' | 'action' | 'success' | 'info' | 'warning' | 'error' | 'loading' | 'default';
     5→export type PromiseT<Data = any> = Promise<Data> | (() => Promise<Data>);
     7→export interface PromiseIExtendedResult extends ExternalToast {
     8→  message: React.ReactNode;
     9→}
    11→export type PromiseTExtendedResult<Data = any> =
    12→  | PromiseIExtendedResult
    13→  | ((data: Data) => PromiseIExtendedResult | Promise<PromiseIExtendedResult>);
    15→export type PromiseTResult<Data = any> =
    16→  | string
    17→  | React.ReactNode
    18→  | ((data: Data) => React.ReactNode | string | Promise<React.ReactNode | string>);
    20→export type PromiseExternalToast = Omit<ExternalToast, 'description'>;
    22→export type PromiseData<ToastData = any> = PromiseExternalToast & {
    30→export interface ToastClassnames {
    31→  toast?: string;
    32→  title?: string;
      →  …
    48→export interface ToastIcons {
    49→  success?: React.ReactNode;
    50→  info?: React.ReactNode;
      →  …
    57→export interface Action {
    58→  label: React.ReactNode;
    59→  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
      →  …
    63→export interface ToastT {
    64→  id: number | string;
    65→  toasterId?: string;
      →  …
    93→export function isAction(action: Action | React.ReactNode): action is Action {
    94→  return (action as Action).label !== undefined;
    95→}
    97→export type Position = 'top-left' | 'top-right' | 'bottom-left' | 'bottom-right' | 'top-center' | 'bottom-center';
    98→export interface HeightT {
    99→  height: number;
   100→  toastId: number | string;
      →  …
   104→interface ToastOptions {
   105→  className?: string;
      →  …
   118→type Offset =
   119→  | {
   128→export interface ToasterProps {
   129→  id?: string;
   130→  invert?: boolean;
      →  …
   152→export type SwipeDirection = 'top' | 'right' | 'bottom' | 'left';
   154→export interface ToastProps {
   155→  toast: ToastT;
   156→  toasts: ToastT[];
      →  …
   184→export enum SwipeStateTypes {
   185→  SwipedOut = 'SwipedOut',
   186→  SwipedBack = 'SwipedBack',
      →  …
   190→export type Theme = 'light' | 'dark';
   192→export interface ToastToDismiss {
   193→  id: number | string;
   194→  dismiss: boolean;
      →  …
   197→export type ExternalToast = Omit<ToastT, 'id' | 'type' | 'title' | 'jsx' | 'delete' | 'promise'> & {

test/README.md
     3→## Getting Started
    25→## Learn More
    34→## Deploy on Vercel

test/next.config.js
     2→const nextConfig = {};

test/package.json
     2→  "name": "test",
     3→  "version": "0.1.0",
     4→  "private": true,
     5→  "scripts": {
    10→  },
    11→  "dependencies": {
    23→  }
    24→}

test/src/app/action.tsx
     2→import { createStreamableUI } from 'ai/rsc';
     4→export async function action() {
     5→  'use server';
      →  …

test/src/app/layout.tsx
     1→export const metadata = {
     6→export default function RootLayout({ children }: { children: React.ReactNode }) {
     7→  return (
      →  …

test/src/app/page.tsx
     3→import React from 'react';
     4→import { Toaster, toast } from 'sonner';
     5→import { action } from '@/app/action';
     7→const promise …
     9→export default function Home({ searchParams }: any) {

test/tests/basic.spec.ts
     1→import { expect, test } from '@playwright/test';
     2→import { toast } from 'sonner';

test/tsconfig.json
     2→  "compilerOptions": {
    25→  },
    26→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../playwright.config.ts"],
    27→  "exclude": ["node_modules"]
    28→}

tsconfig.json
     2→  "compilerOptions": {
     8→  },
     9→  "include": ["src"]
    10→}

turbo.json
     2→  "$schema": "https://turbo.build/schema.json",
     3→  "extends": ["//"],
     4→  "pipeline": {
    12→  }
    13→}

website/README.md
     3→## Getting Started
    25→## Learn More
    34→## Deploy on Vercel

website/next.config.js
     2→const nextConfig = {

website/package.json
     2→  "name": "website",
     3→  "version": "0.1.0",
     4→  "scripts": {
     9→  },
    10→  "dependencies": {
    29→  },
    30→  "devDependencies": {
    34→  }
    35→}

website/src/components/CodeBlock/index.tsx
     7→import styles from './code-block.module.css';
     9→const variants = {
    14→const theme = {
    48→export const CodeBlock = ({ children, initialHeight = 0 }: { children: string; initialHeight?: number }) => {

website/src/components/ExpandModes/index.tsx
     2→import { CodeBlock } from '../CodeBlock';
     4→export const ExpandModes = ({
     5→  expand,
      →  …

website/src/components/Footer/index.tsx
     3→import styles from './footer.module.css';
     5→export const Footer = () => {

website/src/components/Hero/index.tsx
     3→import styles from './hero.module.css';
     6→export const Hero = () => {

website/src/components/How/How.tsx
     1→import React from 'react';
     3→export const How = () => {

website/src/components/Installation/index.tsx
     7→import styles from './installation.module.css';
     9→const variants = {
    14→export const Installation = () => {

website/src/components/Other/Other.tsx
     4→import { CodeBlock } from '../CodeBlock';
     5→import styles from './other.module.css';
     7→export const Other = ({

website/src/components/Position/index.tsx
     2→import { CodeBlock } from '../CodeBlock';
     5→const positions …
     7→export type Position = (typeof positions)[number];
     9→export const Position = ({

website/src/components/Types/Types.tsx
     3→import { CodeBlock } from '../CodeBlock';
     5→const promiseCode = '`${data.name} toast has been added`';
     7→export const Types = () => {
    34→const allTypes = [

website/src/components/Usage/index.tsx
     1→import { CodeBlock } from '../CodeBlock';
     3→export const Usage = () => {

website/src/pages/_app.tsx
     1→import type { ReactElement } from 'react';
     2→import type { AppProps } from 'next/app';
     3→import { Analytics } from '@vercel/analytics/react';
     4→import '../style.css';
     5→import '../globals.css';
     7→export default function Nextra({ Component, pageProps }: AppProps): ReactElement {
     8→  return (
     9→    <>
      →    …

website/src/pages/_meta.json
     2→  "getting-started": {
     6→  "-- API": {
    10→  "toast": {
    14→  "toaster": {
    18→  "-- More": {
    22→  "styling": {

website/src/pages/index.tsx
    10→import Head from '../components/Head';
    11→import { How } from '../components/How/How';
    12→import { Footer } from '../components/Footer';
    14→export default function Home() {

website/theme.config.jsx
     7→  useNextSeoProps() {

website/tsconfig.json
     2→  "compilerOptions": {
    26→  },
    27→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
    28→  "exclude": ["node_modules"]
    29→}
