tests/snapshots/snapshots__budget_sonner_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (486 words)

FUNDING.yml
     1→github …
README.md
     5→## Usage
     7→To start using the library, install it in your project:
     8→
     9→```bash
    10→npm install sonner
    11→```
    12→
      →…
    31→## Documentation
    33→Find the full API reference in the [documentation](https://sonner.emilkowal.ski/getting-started).
package.json
playwright.config.ts
pnpm-workspace.yaml
     1→packages …
src/assets.tsx
     5→export const getAsset = (type: ToastTypes): JSX.Element | null => {
    26→export const Loader = ({ visible, className }: { visible: boolean; className?: string }) => {
    78→export const CloseIcon = (
src/hooks.tsx
     3→export const useIsDocumentHidden = () => {
src/index.tsx
src/state.ts
     1→./types …
    11→import React from 'react';
    15→type titleT = (() => React.ReactNode) | React.ReactNode;
    17→class Observer {
   257→const toastFunction …
   268→const isHttpResponse …
   279→const basicToast = toastFunction;
   281→const getHistory …
   282→const getToasts …
src/types.ts
     1→import React from 'react';
     7→export interface PromiseIExtendedResult extends ExternalToast {
    30→export interface ToastClassnames {
    48→export interface ToastIcons {
    57→export interface Action {
    63→export interface ToastT {
    98→export interface HeightT {
   104→interface ToastOptions {
   118→type Offset =
   119→  | {
   128→export interface ToasterProps {
   154→export interface ToastProps {
   184→export enum SwipeStateTypes {
   192→export interface ToastToDismiss {
test/README.md
test/package.json
test/src/app/action.tsx
test/src/app/layout.tsx
     1→export const metadata = {
test/src/app/page.tsx
test/tsconfig.json
tsconfig.json
turbo.json
website/README.md
     3→## Getting Started …
    25→## Learn More …
    34→## Deploy on Vercel …
website/next.config.js
     2→const nextConfig = {
     8→const withNextra = require('nextra')({
website/package.json
     2→  "name": "website",
     3→  "version": "0.1.0",
     4→  "scripts": {
     9→  },
    10→  "dependencies": {
    29→  },
    30→  "devDependencies": {
    35→}
website/src/components/CodeBlock/index.tsx
     7→import styles from './code-block.module.css';
     9→const variants = {
    14→const theme = {
    48→export const CodeBlock …
website/src/components/ExpandModes/index.tsx
     1→import { toast } from 'sonner';
     2→import { CodeBlock } from '../CodeBlock';
     4→export const ExpandModes = ({
     5→  expand,
     6→  setExpand,
      →…
website/src/components/Footer/index.tsx
     3→import styles from './footer.module.css';
     5→export const Footer = () => {
     6→  return (
      →…
website/src/components/Head/index.tsx
     1→import NextHead from 'next/head';
     3→const ogImage = 'https://sonner.emilkowal.ski/og.png';
     5→const Head …
website/src/components/Hero/index.tsx
     3→import styles from './hero.module.css';
     6→export const Hero = () => {
     7→  return (
      →…
website/src/components/How/How.tsx
     1→import React from 'react';
     3→export const How = () => {
     4→  return (
     5→    <>
      →…
website/src/components/Installation/index.tsx
     7→import styles from './installation.module.css';
     9→const variants = {
    14→export const Installation = () => {
website/src/components/Other/Other.tsx
     4→import { CodeBlock } from '../CodeBlock';
     5→import styles from './other.module.css';
     7→export const Other = ({
     8→  setRichColors,
     9→  setCloseButton,
      →…
website/src/components/Position/index.tsx
     2→import { CodeBlock } from '../CodeBlock';
     5→const positions …
     7→export type Position = (typeof positions)[number];
     9→export const Position = ({
    10→  position: activePosition,
    11→  setPosition,
      →…
website/src/components/Types/Types.tsx
     3→import { CodeBlock } from '../CodeBlock';
     7→export const Types = () => {
website/src/components/Usage/index.tsx
     1→import { CodeBlock } from '../CodeBlock';
     3→export const Usage = () => {
     4→  return (
     5→    <div>
      →…
website/src/pages/_app.tsx
     7→export default function Nextra({ Component, pageProps }: AppProps): ReactElement {
website/src/pages/_meta.json
     2→  "getting-started …
     6→  "-- API …
    10→  "toast …
    14→  "toaster …
    18→  "-- More …
    22→  "styling …
website/src/pages/index.tsx
    14→export default function Home() {
website/theme.config.jsx
     7→  useNextSeoProps() {
website/tsconfig.json
     2→  "compilerOptions": {
    26→  },
    27→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
    28→  "exclude": ["node_modules"]
    29→}
