tests/snapshots/snapshots__budget_sonner_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (5 words)

assets.tsx
hooks.tsx
index.tsx
state.ts
types.ts
